# aurora-isle

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: architecture.md  灵动岛-需求拆解与方案.md
docs/superpowers/plans/: 2026-07-08-settings-window.md  2026-07-09-pin-transform-and-snip-position.md
docs/superpowers/specs/: 2026-07-07-aurora-isle-phase1-design.md  2026-07-08-settings-window-design.md  2026-07-09-pin-enhancement-design.md  2026-07-09-pin-transform-and-snip-position-design.md  snipaste_screenshot_requirements.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  island.rs  mod.rs  pin.rs  screenshot.rs  system.rs
src-tauri/src/db/: migrations.rs  repository.rs
src-tauri/src/models/: config.rs  mod.rs  pin.rs  screenshot.rs
src-tauri/src/services/: clipboard.rs  database.rs  mod.rs  storage.rs  thumbnail.rs  window.rs
src/api/: config.ts  island.ts  pin.ts  screenshot.ts  settings.ts  system.ts
src/components/island/: Expanded.tsx  Island.module.css  Island.tsx  Pill.tsx  SettingsPanel.tsx
src/components/pin/: PinListPanel.module.css  PinListPanel.tsx  PinToolbar.tsx  PinWindow.module.css  PinWindow.tsx
src/hooks/: useClipboardImage.ts  useCursorEvents.ts  useScreenshot.ts  useWindowDrag.ts
src/locales/: zh.ts
src/stores/: configStore.ts  islandStore.ts  pinStore.ts
src/styles/: global.css
src/types/: index.ts
(+15 files in other folders)
